fixed scrollbar overflowing in design

--- a/src/Containers/Newform/Newform.css
+++ b/src/Containers/Newform/Newform.css
@@ -209,7 +209,6 @@
 	background-color: white;
 	border: 1px solid rgb(0, 0, 0);
 	box-shadow: 0 1px 0 rgb(0 0 0 / 6%);
-	border-bottom-right-radius: 15px;
 	border-bottom-left-radius: 15px;
 	box-sizing: border-box;
 	margin-top: -1px;
